<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<ScrollView
		style="@style/ScrollView"
		android:fillViewport="true" >

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content" >
    
			<TextView 
				style="@style/HeadingText" 
				android:id="@+id/comment_form_label_title" />
	
			<TextView 
				style="@style/BoldText" 
				android:id="@+id/comment_form_label_name"
				android:text="@string/comment_form_label_text_name" />

	    	<EditText
    	    	android:id="@+id/comment_form_name"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
	        	android:inputType="textPersonName"
    	    	android:hint="@string/comment_form_label_hint_name"
        		android:maxLength="255" />
        
			<TextView 
				style="@style/BoldText" 
				android:id="@+id/comment_form_label_email"
				android:text="@string/comment_form_label_text_email" />

		    <EditText
    		    android:id="@+id/comment_form_email"
        		android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	    	    android:inputType="textEmailAddress" 
    	    	android:hint="@string/comment_form_label_hint_email"
	    	    android:maxLength="255" />

			<TextView 
				style="@style/BoldText" 
				android:id="@+id/comment_form_label_comment"
				android:text="@string/comment_form_label_text_comment" />

		    <EditText
    		    android:id="@+id/comment_form_comment"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:inputType="textMultiLine"
	        	android:lines="5"
    	    	android:maxLength="1024" />

			<Button
    	    	android:id="@+id/comment_form_submit_button"
        		android:layout_width="110dp"
        		android:layout_height="wrap_content"
	        	android:padding="10dp"
    	    	android:text="@string/form_button_label_text_submit"  />

		</LinearLayout>
		
	</ScrollView>

</merge>